@@ -659,9 +659,9 @@ This for example creates a stock OK button:
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <value>a <see cref="T:Gtk.Widget" /></value>
-        <remarks>To be added</remarks>
+        <summary>Child widget to appear next to the button text.</summary>
+        <value>A <see cref="T:Gtk.Widget" />.</value>
+        <remarks />
         <since version="Gtk# 2.6" />
       </Docs>
       <Attributes>
