@@ -7,10 +7,10 @@
   </AssemblyInfo>
   <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
   <Docs>
-    <param name="cell_layout">To be added.</param>
-    <param name="cell">To be added.</param>
-    <param name="tree_model">To be added.</param>
-    <param name="iter">To be added.</param>
+    <param name="cell_layout">A <see cref="T:Gtk.CellLayout" />.</param>
+    <param name="cell">A <see cref="T:Gtk.CellRenderer" /> whose value is to be set.</param>
+    <param name="tree_model">The model.</param>
+    <param name="iter">A <see cref="T:Gtk.TreeIter" /> indicating the row to set the value for.</param>
     <summary>
       Delegate class used as an argument for <see cref="M:Gtk.CellLayout.SetCellDataFunc" />; see that method's documentation for usage details.
     </summary>
