@@ -587,9 +587,9 @@ public class CellRendererCompletion : CellRendererText
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <value>a <see cref="T:System.Boolean" /></value>
-        <remarks>To be added</remarks>
+        <summary>Display the cell sensitive.</summary>
+        <value>A <see cref="T:System.Boolean" />.</value>
+        <remarks>The default value is <see langword="true" />.</remarks>
         <since version="Gtk# 2.6" />
       </Docs>
       <Attributes>
@@ -606,8 +606,15 @@ public class CellRendererCompletion : CellRendererText
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>This signal gets emitted when a cell starts to be edited.</summary>
+        <remarks>
+	  <para>
+	    The intended use of this signal is to do special setup on editable cell, e.g. adding a <see cref="T:Gtk.EntryCompletion" /> or setting up additional columns in a <see cref="T:Gtk.ComboBox" />.
+	  </para>
+	  <para>
+	    Note that GTK# doesn't guarantee that cell renderers will continue to use the same kind of widget for editing in future releases, therefore you should check the type of the cell before doing any specifi setup.
+	  </para>
+	</remarks>
         <since version="Gtk# 2.6" />
       </Docs>
       <Attributes>
@@ -644,9 +651,9 @@ public class CellRendererCompletion : CellRendererText
         <Parameter Name="canceled" Type="System.Boolean" />
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
+        <summary>Informs the cell renderer that the editing is stopped.</summary>
         <param name="canceled">a <see cref="T:System.Boolean" /></param>
-        <remarks>To be added</remarks>
+        <remarks>If <paramref name="canceled" /> is <see langword="true" />, the cell renderer will emit the <see cref="F:Gtk.CellRenderer.EditingCanceled" /> event. This method should be called by cell renderer implementations in response to the <see cref="F:Gtk.CellEditable.EditingDone" /> event of <see cref="T:Gtk.CellEditable" />.</remarks>
         <since version="Gtk# 2.6" />
       </Docs>
     </Member>
@@ -661,10 +668,10 @@ public class CellRendererCompletion : CellRendererText
         <Parameter Name="height" Type="System.Int32&amp;" RefType="out" />
       </Parameters>
       <Docs>
-        <param name="width">To be added.</param>
-        <param name="height">To be added.</param>
-        <summary>To be added.</summary>
-        <remarks>To be added.</remarks>
+        <param name="width">Location to fill in with the fixed width of the widget, or <see langword="null" />.</param>
+        <param name="height">Location to fill in with the fixed height of the widget, or <see langword="null" />.</param>
+        <summary>Fills in <parameref name="width" /> and <paramref name="height" /> with the appropriate size.</summary>
+        <remarks />
       </Docs>
     </Member>
   </Members>
