@@ -1,3 +1,10 @@
+2006-03-23  Hector E. Gomez Morales  <hectorgm@ciencias.unam.mx>
+
+	* en/Gtk/Button.xml
+	* en/Gtk/CellRendererText.xml
+	* en/Gtk/CellLayoutDataFunc.xml
+	* en/Gtk/CellRenderer.xml: Docs.
+
 2006-03-22  Hector E. Gomez Morales  <hectorgm@ciencias.unam.mx>
 
 	* en/Gtk/AboutDialogActivateLinkFunc.xml
